--- a/ex1.html
+++ b/ex1.html
@@ -1,69 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1 - CSS</title>
+    <title>Boostrap Assignment</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
-<body>
+</head>
 <style>
     .navbar{
-        background-color: rgb(28, 28, 199);
-        color: white;
-        padding: 1%;
-    }
-    .nav{
-        display: flex;
-        direction: row;
+        background-color: rgb(39, 39, 189);
     }
     .nav-items{
-        list-style: none;
-        padding-left: 2%;
+        color: white;
+        font-size: 18px;
+        font-weight:500;
     }
-    .title{
-        margin-top: 10px;
-        display: flex;
-        justify-content: center;
-    }
-    .content{
-        display: flex;
-    }
-    .content img{
-        float: left;
-        height: 400px;
-        width: 400px;
-    }
-    .content p{
-        background-color: rgb(250, 244, 240);
-        border-radius: 10px;
-        font-family: sans-serif;
-        font-size: 20px;
-        float: right;
-        padding: 2% 5%;
-    }
-   .content span{
-    color: pink;
-   }
 </style>
-
+<body>
     <div class="navbar">
-        <ul class="nav">
-            <img src="logo.jpg" alt="logo">
-            <li class="nav-items">Home</li>
-            <li class="nav-items">Products</li>
-            <li class="nav-items">About Us</li>
-            <li class="nav-items">Contact Us</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2 class="title">About Us</h2>
-        <div class="content">
-            <img src="image1.png" alt="image">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto doloremque vel eligendi possimus vitae necessitatibus fugiat quos ipsum minima vero? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo nesciunt consequuntur amet quidem alias autem commodi eum, iure facere repellendus libero et? Dicta officiis laboriosam ducimus eius rem? Laboriosam, doloremque.<br><a href=""><span>More Info..</span></a></p>
-            
+        <div class="container">
+            <div class="col-2"><img src="logo.jpg" alt="logo"></div>
+            <div class="col-4">
+                <ul class="nav">
+                    <li class="nav-items">Home</li>
+                    <li class="nav-items ml-3">Products</li>
+                    <li class="nav-items ml-3">About Us</li>
+                    <li class="nav-items ml-3">Contact Us</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
